tests/preproc/define/fail002.ds
#define MACRO# include "1.ds"

const a = MACRO ;